# cpp-concurency-in-action

./: CMakeLists.txt  Dockerfile  Makefile
_project_template/: CMakeLists.txt  main.cpp
